# rules-js-node-gyp-error

./: BUILD.bazel  README.md  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
